agregar estilos al header, footer y navbar de la parte publica, ademas agregar los iconos de redes sociales y agregar el logo de la tienda

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,12 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "@shop/*":["src/app/@public/*"], //configurar variables para rutas relativas
+      "@admin/*":["src/app/@admin/*"] ////configurar variables para rutas relativas
+
+      //en este caso rutas base que se van a llamar en la aplicacion
+    },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
