--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
     "@apollo/client": "^3.6.9",
+    "@auth0/angular-jwt": "^5.0.2",
     "apollo-angular": "^2.6.0",
     "graphql": "^15.8.0",
     "react": "^18.2.0",
     "rxjs": "~6.5.4",
     "subscriptions-transport-ws": "^0.11.0",
+    "sweetalert2": "^11.4.24",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
