--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@angular/compiler": "~11.2.14",
     "@angular/core": "~11.2.14",
     "@angular/forms": "~11.2.14",
+    "@angular/localize": "~11.2.14",
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
     "@apollo/client": "^3.6.9",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "apollo-angular": "^2.6.0",
+    "bootstrap": "^4.5.0",
     "graphql": "^15.8.0",
     "react": "^18.2.0",
     "rxjs": "~6.5.4",
