--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.2.14",
     "@apollo/client": "^3.6.9",
     "@auth0/angular-jwt": "^5.0.2",
+    "@mugan86/ng-shop-ui": "^0.2.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "apollo-angular": "^2.6.0",
     "bootstrap": "^4.5.0",
